--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- =======BOXICONS ======= -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- =======MAIN CSS ======= -->
-    <link rel="stylesheet" href="../Blog-website/CSS/style.cs">
+    <link rel="stylesheet" href="../Blog-website/CSS/style.css">
 </head>
 <body>
     <header>
