--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="nav container">
-            <a href="#" class="logo">Coder<span>Ruenbaby</span></a>
+            <a href="#" class="logo">Coder<span>ruenbaby</span></a>
             <a href="#" class="login">SignUp</a>
         </div>
     </header>
